// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note renders the component 1`] = `
.emotion-4 {
  padding: 1rem;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 400;
  line-height: 1.5;
  font-size: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-radius: 6px;
  padding-right: 1rem;
  border: 1px solid;
  background-color: #E8F5FF;
  border-color: #98CBFF;
}

.emotion-4 a {
  color: #0041AB;
}

.emotion-3 {
  margin-left: 0.5rem;
  fill: currentColor;
  margin-right: unset;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0.75rem;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

.emotion-2 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #414D63;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #414D63;
  width: 100%;
}

<article
  class="emotion-4"
  data-test-id="cf-ui-note"
>
  <div
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
  </div>
  <div
    class="emotion-3"
  >
    <p
      class="emotion-2"
      data-test-id="cf-ui-text"
    >
      A piece of information that is relevant to the context the user is currently in.
    </p>
  </div>
</article>
`;

exports[`Note renders the component with an additional class name 1`] = `
.emotion-4 {
  padding: 1rem;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 400;
  line-height: 1.5;
  font-size: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-radius: 6px;
  padding-right: 1rem;
  border: 1px solid;
  background-color: #E8F5FF;
  border-color: #98CBFF;
}

.emotion-4 a {
  color: #0041AB;
}

.emotion-3 {
  margin-left: 0.5rem;
  fill: currentColor;
  margin-right: unset;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0.75rem;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

.emotion-2 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #414D63;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #414D63;
  width: 100%;
}

<article
  class="my-extra-class emotion-4"
  data-test-id="cf-ui-note"
>
  <div
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
  </div>
  <div
    class="emotion-3"
  >
    <p
      class="emotion-2"
      data-test-id="cf-ui-text"
    >
      A piece of information that is relevant to the context the user is currently in.
    </p>
  </div>
</article>
`;

exports[`Note renders the component with title 1`] = `
.emotion-4 {
  margin-left: 0.5rem;
  fill: currentColor;
  margin-right: unset;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0.75rem;
}

.emotion-3 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #414D63;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #414D63;
  width: 100%;
}

.emotion-5 {
  padding: 1rem;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 400;
  line-height: 1.5;
  font-size: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-radius: 6px;
  padding-right: 1rem;
  border: 1px solid;
  background-color: #EAF9E8;
  border-color: #9ED696;
}

.emotion-5 a {
  color: #00550C;
}

.emotion-0 {
  display: inline-block;
  fill: #008539;
  height: 24px;
  width: 24px;
}

.emotion-2 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  color: #1B273A;
  font-weight: 500;
  font-size: 1rem;
  margin-bottom: 0.5rem;
}

<article
  class="emotion-5"
  data-test-id="cf-ui-note"
>
  <div
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
  <div
    class="emotion-4"
  >
    <h2
      class="emotion-2"
      data-test-id="cf-ui-heading"
    >
      Positive title
    </h2>
    <p
      class="emotion-3"
      data-test-id="cf-ui-text"
    >
      A piece of information that is relevant to the context the user is currently in.
    </p>
  </div>
</article>
`;
